--- a/bio/index.html
+++ b/bio/index.html
@@ -18,8 +18,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -30,17 +30,17 @@
 
     <header>
       <div class="content-wrapper">
-        <h2><a href="index.html">Bob Wilber</a></h2>
+        <h2><a href="../index.html">Bob Wilber</a></h2>
         <div class="header-divider"></div>
         <nav id="navbar">
           <ul class="navigation">
-            <li><a href="bio/index.html">Biography</a></li>
-            <li><a href="listening/index.html">Media</a></li>
+            <li><a href="index.html">Biography</a></li>
+            <li><a href="../music/index.html">Media</a></li>
             <!-- <li><a href="videos/index.html">Videos</a></li> -->
             <!-- <li><a href="interviews/index.html">Interviews</a></li> -->
             <!-- <li><a href="articles/index.html">Articles</a></li> -->
-            <li><a href="stories/index.html">Writings</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="../articles/index.html">Writings</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
        </nav>
       </div>
