--- a/bio/index.html
+++ b/bio/index.html
@@ -51,18 +51,18 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <div class="title">
-          <h1> Bob Wilber</h1>
-          <h3>The life and music of Bob Wilber</h3>
+          <h1></h1>
+          <h3></h3>
         </div>
       </div>
     </section>
 
     <section class="welcome-area">
       <div class="content-wrapper">
-        <h2>Hey there!</h2>
+        <h2></h2>
           <div class="welcome">
-            <p class="welcome-text">Come on in, grab a drink, and make yourself at home.</p>
-            <p class="welcome-text">If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.</p>
+            <p class="welcome-text"></p>
+            <p class="welcome-text"></p>
           </div>
       </div>
     </section>
@@ -85,7 +85,7 @@
             <p class="welcome-text">Then please get in touch, we'd love to hear from you!</p>
           </address>
           <address>
-            <a href="mailto:me@bobwilber.co.uk">me at bobwilber.co.uk</a>
+            <a href="mailto:admin@bobwilber.co.uk">admin at bobwilber.co.uk</a>
           </address>
         </div>
         <!-- <div class="social">
